welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:30: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  for (i<- 0 to n) {
  ^golomb:33: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  return T
  ^